name:           species
version:        0.3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.6
tested-with:    GHC >= 6.10 && < 6.11, GHC == 6.12.1
author:         Brent Yorgey
maintainer:     Brent Yorgey <byorgey@cis.upenn.edu>
category:       Math
synopsis:       Computational combinatorial species

description:    A DSL for describing and computing with combinatorial species,
                e.g. counting labelled or unlabelled structures, or generating
                a list of all labeled structures for a species.
source-repository head
  type:     darcs
  location: http://code.haskell.org/~byorgey/code/species

Library
  build-depends: base >= 3.0 && < 4.3, numeric-prelude >= 0.1.1 && < 0.2,
                 np-extras >= 0.2 && < 0.3, containers >= 0.2 && < 0.4,
                 lub >= 0.0.5 && < 0.1, multiset-comb >= 0.2
  exposed-modules:
    Math.Combinatorics.Species
    Math.Combinatorics.Species.Class
    Math.Combinatorics.Species.Types
    Math.Combinatorics.Species.Labelled
    Math.Combinatorics.Species.Unlabelled
    Math.Combinatorics.Species.CycleIndex
    Math.Combinatorics.Species.AST
    Math.Combinatorics.Species.AST.Instances
    Math.Combinatorics.Species.Structures
    Math.Combinatorics.Species.Rec
    Math.Combinatorics.Species.Enumerate
  extensions: NoImplicitPrelude